# Basic-Webpage-with-Vue.js-and-Axum

./: .gitignore  README.md  package-lock.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json
frontend/src/: App.vue
ml/: __init__.py  __main__.py  requirements.txt
